--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,3 @@
-
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
-  "singleQuote": true,
-  "printWidth": 100
+  "$schema": "https://json.schemastore.org/prettierrc"
 }
