--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "vite-plugin-vue-devtools": "^7.6.5",
     "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
-  }
+  },
+  "packageManager": "pnpm@9.14.4"
 }
