--- a/package.json
+++ b/package.json
@@ -15,39 +15,40 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/ electron/",
     "electron": "electron .",
-    "clean": "rimraf dist dist-electron"
+    "clean": "rimraf dist dist-electron",
+    "ci": "pnpm build && prettier --check src/ electron/ && eslint . && vitest run && pnpm test:e2e"
   },
   "dependencies": {
-    "pinia": "^2.2.6",
+    "pinia": "^2.3.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.9.3",
+    "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vitest/eslint-plugin": "1.1.10",
+    "@vitest/eslint-plugin": "1.1.14",
     "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/eslint-config-typescript": "^14.1.4",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "electron": "^33.2.1",
-    "eslint": "^9.14.0",
+    "eslint": "^9.16.0",
     "eslint-plugin-playwright": "^2.1.0",
-    "eslint-plugin-vue": "^9.30.0",
+    "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "typescript": "~5.6.3",
-    "vite": "^6.0.1",
+    "vite": "^6.0.2",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
-    "vite-plugin-vue-devtools": "^7.6.5",
-    "vitest": "^2.1.5",
+    "vite-plugin-vue-devtools": "^7.6.7",
+    "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10"
   },
   "packageManager": "pnpm@9.14.4"
