--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vue/eslint-config-typescript": "^14.1.4",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
     "eslint": "^9.16.0",
@@ -45,6 +46,7 @@
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.6.3",
     "vite": "^6.0.2",
     "vite-plugin-electron": "^0.29.0",
