--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "dist-electron/main/index.js",
   "scripts": {
     "dev": "vite",
     "build": "pnpm clean && run-p type-check \"build-only {@}\" --",
@@ -13,19 +12,21 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/ electron/",
-    "electron": "electron .",
-    "clean": "rimraf dist dist-electron release",
-    "ci": "pnpm build && prettier --check src/ electron/ && eslint . && vitest run && pnpm test:e2e",
-    "package": "pnpm build && electron-builder -mw --config electron-builder-config.ts"
+    "format": "prettier --write src/",
+    "clean": "rimraf dist release",
+    "ci": "pnpm build && prettier --check src/  && eslint . && vitest run && pnpm test:e2e",
+    "bundle:win": "tauri build --runner cargo-xwin --target x86_64-pc-windows-msvc",
+    "bundle:mac": "tauri build --bundles dmg,app"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.1.1",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
+    "@tauri-apps/cli": "^2.1.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.1",
@@ -37,8 +38,6 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
-    "electron": "^33.2.1",
-    "electron-builder": "^25.1.8",
     "eslint": "^9.16.0",
     "eslint-plugin-playwright": "^2.1.0",
     "eslint-plugin-vue": "^9.32.0",
@@ -49,8 +48,6 @@
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.3",
     "vite": "^6.0.2",
-    "vite-plugin-electron": "^0.29.0",
-    "vite-plugin-electron-renderer": "^0.14.6",
     "vite-plugin-vue-devtools": "^7.6.7",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10"
