--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.1",
@@ -37,6 +38,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
     "eslint": "^9.16.0",
