scaffold app layout and navigation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "package": "pnpm build && electron-builder -mw --config electron-builder-config.ts"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.468.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
