get the different sections talking to each other

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "package": "pnpm build && electron-builder -mw --config electron-builder-config.ts"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.3.0",
+    "@ngneat/falso": "^7.2.0",
     "lucide-vue-next": "^0.468.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13"
