--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   },
   "dependencies": {
     "@ngneat/falso": "^7.2.0",
+    "@vueuse/core": "^12.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-vue-next": "^0.468.0",
     "pinia": "^2.3.0",
+    "radix-vue": "^1.9.11",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13"
   },
   "devDependencies": {
@@ -38,7 +44,6 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.14",
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
     "eslint": "^9.16.0",
